--- a/src/app/country/components/country-table/country-table.component.html
+++ b/src/app/country/components/country-table/country-table.component.html
@@ -10,7 +10,8 @@
     </thead>
     <tbody>
         <tr
-            *ngFor="let country of countries; index as i">
+            *ngFor="let country of countries; index as i"
+            class="animate_anumated animate_fateId animate_faster">
             <td> {{ i + 1 }} </td>
             <td>
                 <img 
